<resources>
	<string name="action_about">Developer</string>
	<string name="dialog_title">about</string>
	<string name="dialog_message1">Created by Raymundo T. Melecio, in Kotlin programming language. From Corte-baud
        Getafe, Bohol.
                                    </string>
    <string name="app_name">Santos Rosaryo</string>
    <string name="action_settings">Settings</string>
    <string name="kalipay">Kalipay</string>
    <string name="kasakit">Kasakit</string>
    <string name="kahayag">Kahayag</string>
    <string name="himaya">Himaya</string>
    <string name="title_activity_mystery_details">MysteryDetails</string>
    <string name="step_panguros">Buhaton Ang Pagpanguros</string>
    <string name="sign_of_cross">Sa Ngalan Sa Amahan sa Anak ug sa Espirito Santo, Amen</string>
    <string name="step_mitoo_ako">Litukon Ang Mitoo Ako</string>
    <string name="mitoo_ako">Mitoo ako sa Dios nga Amahan, makagagahum sa tanan. Magbubuhat sa
		langit ug sa yuta. Mitoo ako sa iyang Anak nga bugtong nga si Jesukristo, Ginoo nato.
		Gipanamkon sa lalang sa Espiritu Santo, gianak ni Santa Maria Birhen. Gisakit sa sugo ni
		Pontio Pilato, gilansang sa krus, namatay ug gilubong. Miadto siya sa mga nangamatay, sa
		ikatulo ka adlaw na banhaw siya. Misaka sa langit ug nagalingkod sa tuo sa Dios nga Amahan.
		Gikan didto mobalik siya aron paghukom sa mga buhi ug sa mga minatay. Mitoo ako sa Espiritu
		Santo, mitoo sab ako nga may Santa Iglesia Katolika, may kaambitan sa mga Santos, may
		kapasayloan sa mga sala ug may pagkabanhaw sa lawas ug sa kinabuhing walay katapusan, Amen.
	</string>
    <string name="step_Amahan_namo">Litukon ang \"Amahan Namo\" sa dako nga Lusok</string>
    <string name="amahan_namo">Amahan Namo, anaa ka sa langit, pagdaygon ang imong ngalan moabot
		kanamo ang imong gingharian, matuman ang imong pagbuot dinhi sa Yuta maingon sa langit. Ang
		kalan-on namo sa mata adlaw, ihatag kanamo karon adlawa ug pasayloa kami sa among mga sala,
		ingon nga magapasaylo kami sa mga nakasala kanamo, ug dili mo kami itugyan sa panulay,
		hinonoa luwasa kami da dautan. Amen.
	</string>
    <string name="step_Maghimaya_ka_maria_3times">STEP 4: Litukon Ang \"Maghimaya Ka Maria\" sa tulo
		ka
		mangsunod
		nga
		Lusok
	</string>
    <string name="maghimaya_ka_maria">Maghimaya ka Maria, napuno ka sa grasya, ang Ginoong Dios anaa
		kanimo. Bulahan ikaw sa babaye nga tanan; Bulahan usab ang mahal na bunga sa tiyan mo nga si
		Jesus. Santa Maria, Inahan ka sa Dios, ig ampo mo kaming makasasala, karon ug sa oras ang
		among ikamatay. Amen.
	</string>
    <string name="himaya_sa_amahan">+ Himaya sa Amahan, sa Anak, ug sa Espirito Santo. Maingon sa
		sinugdan, karon ug sa gihapon, hangtud sa mga katuigan nga tanan. Amen.
	</string>
    <string name="step_himaya_sa_amahan">Litukon Ang \"Himaya sa Amahan\"</string>

    <string name="step_maghimaya_10times">Litukon ang 10 ka\"Maghimaya ka Maria\" Sa Napulo ka
		Gagmay nga Mga Lusok
	</string>
    <string name="step_mamlandong">Mamalandong sa Misteryo</string>
    <string name="Kalipay_1st_misteryo">Ang Pagpahibalo sa Anghel</string>
    <string name="step_o_hesus_ko">Litukon ang \"Oh Hesus ko\"</string>
    <string name="oh_hesus_ko">O Jesus ko, pasaylo kami sa among mga sala, luwas kami sa kalayo sa
		imperno, dad-a ang tanang kalag sa purgatoryo ngadto sa langit, labi na kadtong
		nagkinahanglan kayo sa imong santos mga kalooy ug panabang.
	</string>
    <string name="kalipay1">Ang Una\'ng Misteryo Sa Kalipay: Ang pagpanamkon ni Maria Santisima sa
		lalang
		sa Espiritu
		Santo: Lucas 1:26-38
	</string>
    <string name="kalipay2">Ang Ika-duha\'ng Misteryo Sa Kalipay: Ang pagduaw ni Maria Santisima sa
		iyang ig-agaw nga si Santa Isabel: Lucas 1:39-47
	</string>
    <string name="kalipay3">Ang Ika-tulo\'ng Misteryo Sa Kalipay: Ang pagkatawo sa Diosnong Bata
		didto
		sa Belen: Lucas 2:1-7</string>
    <string name="kalipay4">Ang Ika-upat nga Misteryo Sa Kalipay: Ang paghalad sa Diosnong Bata
		didto
		sa Templo: Lucas 2:22-32</string>
    <string name="kalipay5">Ang Ika-lima\'ng Misteryo Sa Kalipay: Ang pagkawala ug pagkakaplag sa
		Diosnong Bata taliwala sa mga
		makinaadmanon: Lucas 2:41-52
	</string>
    <string name="kasakit1">Ang Una\'ng Misteryo Sa Kasakit: Ang pag-ampo sa atong Ginoong
		Jesukristo
		sa taman sa Getsemani: Marcos 14:32-36</string>
    <string name="kasakit2">Ang Ika-duha\'ng Misteryo Sa Kasakit: Ang paghampak sa atong Ginoong
		Jesukristo nga ginaid sa usa ka haligi
		nga bato: Juan 18:28-38 ug 19:1
	</string>
    <string name="kasakit3">Ang Ika-tulo\'ng Misteryo Sa Kasakit: Ang pag purong-purong sa atong
		Ginoong
		Jesukristo sa purong-purong nga
		tunukon: Marcos 15:16-20
	</string>
    <string name="kasakit4">Ang Ika-upat nga Misteryo Sa Kasakit: Ang pagpas-an sa atong Ginoong
		Jesukristo sa krus sa dalan sa kapaitan: Juan 19:12-16
	</string>
    <string name="kasakit5">Ang Ika-lima\'ng Misteryo Sa Kasakit: Ang pagkamatay sa atong Ginoong
		Jesukristo sa krus: Lucas 23:33-34 ug 39-46</string>
    <string name="himaya1">Ang Una\'ng Misteryo Sa Himaya: Ang Pagkabanhaw sa atong Ginoo: Lukas 24:1–6a</string>
    <string name="himaya2">Ang Ika-duha\'ng Misteryo Sa Himaya: Ang pagkayab sa langit sa atong
		Ginoo: Lukas 24:50-53</string>
    <string name="himaya3">Ang Ika-tulo\'ng Misteryo Sa Himaya: Ang Pagkunsad sa Espirito
		Santo: Buhat 2:1-4</string>
    <string name="himaya4">Ang Ika-upat nga Misteryo Sa Himaya: Ang Pagdala ngadto sa langit sa
		mahal
		nga birhen Maria: 1 Corinto 15:54</string>
    <string name="himaya5">Ang Ika-lima\'ng Misteryo Sa Himaya: Ang Pagpurongpurong ni Maria nga
		Rayna
		sa tanang mga binuhat: Gipadayag 12:1-6</string>
    <string name="Kahayag1">Ang Una\'ng Misteryo Sa Kahayag: Ang pagbunyag kang Jesus sa suba sa
		Jordan: Mateo 3:13-17</string>
    <string name="Kahayag2">Ang Ika-duha\'ng Misteryo Sa Kahayag: Ang pagpadayag ni Jesus sa kombira
		sa
		kasal sa Cana: Juan 2:1-12</string>
    <string name="Kahayag3">Ang Ika-tulo\'ng Misteryo Sa Kahayag: Ang pagsangyaw sa umaabot nga
		Ginharian sa Dios: Marcos 1:15</string>
    <string name="Kahayag4">Ang Ika-upat nga Misteryo Sa Kahayag: Ang pagkausab sa panagway ni
		Jesus: Mateo 17:1-9</string>
    <string name="Kahayag5">Ang Ika-lima\'ng Misteryo Sa Kahayag: Ang pagtukod sa Santos nga
		Eukaristiya: Juan 13:1</string>
    <string name="step_maghimaya_ka_rayna">Litukon Ang \"Mayhimaya Ka Rayna\"</string>
    <string name="maghimaya_ka_rayna">Maghimaya ka rayna, inahan sa kaluoy, kinabuhi, knatam-is,
		ikaw ang gilauman namo, maghimaya ka. Nagapanawag kami kanimo, mga hininginlang anak ni iba.
		Nagapanghupaw kami, nagaagulo, nagapanghilak ‘ning walog nga luhaan. Dan among mag-alampo,
		ilingi mo kanamo kanang imong mga mata nga maloloy-on. Ug kun ubos na niining paghingilin,
		ipakita mo kanamo, kanang imong anak nga si Jesus, nga mahal nga bunga sa tiyan mo. Ay
		maaghup, ay maloloy-on, ay matam-is nga birhen Maria. I-ampo mo kami, Santa nga Inahan sa
		Dios. Aron nahimo kaming takus sa nga saad ni Jesu-Kristo. Amen.
	</string>
    <string name="step_maghimaya_ka_litanya">Litukon ang Litanya</string>
    <string name="litanya">Ginoo, Kaloy-i Kami \n Kristo Kaloy-i Kami \n Ginoo, Kaloy-i Kami \n
		Kristo,Dungga Kami \n Kristo, Pamatia KAmi \n Dios, Amahan sa Langit, Kaloy-i Kami\n Dios
		Anak Manunubos sa
		Kalibutan, Kaloy-i Kami\n Dios Espiritu Santo, Kaloy-i Kami\n Santa Trinidad, Dios nga usa,
		Kaloy-i Kami \n[[IG-AMPO MO KAMI]] Santa Maria,\n Santa nga Inahan sa Dios,\n Santa nga
		Birhen sa
		mga Birhen,\n Inahan Ni Kristo,\n Inahan sa Grasya sa Dios,\n Inahan nga putli,\n Inahan
		nga wala
		hilabti,\n Inahan nga sa sala wala mabuling,\n Inahan Nga Buotan,\n Inahan Nga Takus
		Dayegon,\n
		Inahan sa Kanunayng Panabang,\n Inahan sa Magbubuhat,\n Inahan sa Manluluwas(Manunubos),\n
		Birhen
		nga sa Kaalam walay Ingon,\n Birhen nga Gitahud Namo,\n Birhen kansang Kadayganan Giawit
		Namo,\n
		Birhen nga Gamhanan,\n Bitrhen nga Maloloy-on,\n Birhen nga Matoohon,\n Salamin sa
		Katarungan,\n
		Lingkoranan sa Kinaadman,\n Hinungdan sa Among Kalipay,\n Kalis sa Espiritohanon,\n Kalis sa
		Kadungganan,\n Mabulokong Kalis sa Paghalad, .\n Rosa nga Dili Matukib,\n Lantawan ni David,\n
		Lantawan nga Garing,\n Balay nga Bulawan,\n Arka sa Kasabotan,\n Ganghaan sa Langit,\n Bitoon sa
		Kabuntagon,\n Kaayohan sa mga Masakiton,\n Dalangpanan sa mga Makasasala,\n Maglilipay sa Mga
		nanagsubo,\n Hinabang sa mga Kristiyanos,\n RAyna sa mga Angheles,\n Rayna sa mga Patriyarka,\n
		RAyna sa mga Propeta,\n Rayna sa mga Apostoles, . \n RAyna sa mga Martires,\n Rayna sa mga
		Kompesores,\n Rayna sa Mga Birhen,\n Rayna sa mga Santos,\n Rayna nga Gipanamkon sa sala nga
		Panulondon,\n Rayna nga Gipanamkon sa langit,\n Rayna sa Santos Uyamot nga Rosaryo,\n Rayna sa
		Pamilya,\n Rayna sa Kalinaw,\n Kordero sa Dios\n P: Kordero sa Dios Nga nagawagtang sa Sala sa
		kalibutan\n R: Pasayloa kami Ginoo, Kay ako nakasala \nP: Kordero sa Dios Nga nagawagtang sa
		Sala sa kalibutan\n R: Pamatia kami Ginoo, Ingon nga mga Anak sa Dios \nP: Kordero sa Dios Nga
		nagawagtang sa Sala sa kalibutan\n R: kaloy-i Kami\n P: Ig-ampo mo kami Santa nga Inahan sa Dios
		\nR: Aron mahimo kaming takos sa mga saad ni Jesukristo.Amen.\n\n\n\n Mag-ampo Kita O Dios Kansang
		Anak nga bugtong, namatay ug nabanhaw pagusab, nagadangat alang kanamo, sa mga ganti sa
		tunhayng kinabuhi, pinaagi sa Iyang Kinabuhi, Kamatayon ug Pagkabanhaw, pinaagi sa mga
		misteryo dinhi sa santos Uyamot nga Rosaryo sa mahal nga Birhen Maria, nag maawat namo ug
		madawat ang ilang Ginasaad. Tungod sa Maong Jesukristo nga Among Ginoo. Amen.
	</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
