<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_mystery_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.yamamz.santosrosaryo.fragments.LastFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    tools:targetApi="jelly_bean"
                    android:text="@string/step_maghimaya_ka_rayna"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/title" />

                <TextView
                    android:textColor="@color/black"
                    android:textSize="@dimen/paragrap"
                    android:fontFamily="cursive"
                    tools:targetApi="jelly_bean"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/textmargin"
                    android:layout_marginRight="@dimen/textmargin"
                    android:gravity="center"
                    android:text="@string/maghimaya_ka_rayna" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    tools:targetApi="jelly_bean"
                    android:text="@string/step_maghimaya_ka_litanya"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/title" />

                <TextView
                    android:textColor="@color/black"
                    android:textSize="@dimen/paragrap"
                    android:fontFamily="cursive"
                    tools:targetApi="jelly_bean"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/litanya" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
